@@ -335,7 +335,7 @@ If you enable this setting, the keys are copied top level in the output document
 *`overwrite_keys`*:: If `keys_under_root` and this setting are enabled, then the values from the decoded
 JSON object overwrite the fields that Filebeat normally adds (type, source, offset, etc.) in case of conflicts.
 
-*`add_error_key`*:: If this setting is enabled, Filebeat adds a "json_error" key in case of JSON
+*`add_error_key`*:: If this setting is enabled, Filebeat adds a "error.message" and "error.type: json" key in case of JSON
 unmarshalling errors or when a `message_key` is defined in the configuration but cannot be used.
 
 *`message_key`*:: An optional configuration setting that specifies a JSON key on
