@@ -85,7 +85,7 @@ https://github.com/elastic/beats/compare/v5.4.0...v6.0.0-alpha1[View commits]
 
 *Affecting all Beats*
 
-- Introduce beat version in the Elasticsearch index and mapping template {pull}3527[3527] 
+- Introduce beat version in the Elasticsearch index and mapping template {pull}3527[3527]
 - Usage of field `_type` is now ignored and hardcoded to `doc`. {pull}3757[3757]
 - Change vendor manager from glide to govendor. {pull}3851[3851]
 - Rename `error` field to `error.message`. {pull}3987[3987]
@@ -98,6 +98,7 @@ https://github.com/elastic/beats/compare/v5.4.0...v6.0.0-alpha1[View commits]
 - Remove deprecated config options force_close_files and close_older. {pull}3768[3768]
 - Change clean_removed behaviour to also remove states for files which cannot be found anymore under the same name. {pull}3827[3827]
 - Remove `document_type` config option. Use `fields` instead. {pull}4204[4204]
+- Move json_error under error.message and error.key. {pull}4167[4167]
 
 *Packetbeat*
 
